# data_compression

./: .gitignore  CMakeLists.txt  Compression7zz.h  PlatformAPI.h  file_loader_writer.h  lz78.h  lzw.h  main.1  main.rle  main.z77  main_2.cpp  main_lzw.cpp  main_rle.cpp  rle.h  rle_compression.h  test.lzw  test.mf4  test.miniz  test.z77  test_Dec.mf4
miniz/: miniz.h
